--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,10 @@
     <center>
       <div id="mainBodyDiv">
         <span id="timerLocation">0</span><br /><br />
+        <span id="current_timer">Current timer</span><br /><br />
+
         <button id="pauseButton"><span id="put_un_here"></span>pause</button>
-        <br /><br />
+        <br /><br /><br />
         Break Time:
         <input
           type="number"
